# serializer version: 1
# name: test_entity_registry[binary_sensor.apartment_carbonmonoxidedetecto-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.apartment_carbonmonoxidedetecto',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_21_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.apartment_carbonmonoxidedetecto-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Apartment  CarbonMonoxideDetecto',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 21,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.apartment_carbonmonoxidedetecto',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.apartment_smokedetector-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.apartment_smokedetector',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_16_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.apartment_smokedetector-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Apartment  SmokeDetector',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 16,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.apartment_smokedetector',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.dining_room_two_door-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.dining_room_two_door',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_12_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.dining_room_two_door-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Dining Room Two Door',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 12,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.dining_room_two_door',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.doorbell_other-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.doorbell_other',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_7_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.doorbell_other-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Doorbell  Other',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 7,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.doorbell_other',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.downstairs_hallway_carbonmonoxid-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.downstairs_hallway_carbonmonoxid',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_22_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.downstairs_hallway_carbonmonoxid-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Downstairs Hallway CarbonMonoxid',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 22,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.downstairs_hallway_carbonmonoxid',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.downstairs_hallway_smokedetector-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.downstairs_hallway_smokedetector',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_18_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.downstairs_hallway_smokedetector-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Downstairs Hallway SmokeDetector',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 18,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.downstairs_hallway_smokedetector',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.fire-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.fire',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_3_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.fire-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Fire',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 3,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.fire',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.front_door_door-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.front_door_door',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_26_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.front_door_door-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Front Door  Door',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 26,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.front_door_door',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.garage_side_other-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.garage_side_other',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_25_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.garage_side_other-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Garage Side  Other',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 25,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.garage_side_other',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.gas-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.gas',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_4_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.gas-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Gas',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 4,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.gas',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.guest_bedroom_smokedetector-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.guest_bedroom_smokedetector',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_20_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.guest_bedroom_smokedetector-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Guest Bedroom SmokeDetector',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 20,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.guest_bedroom_smokedetector',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.kid_bedroom_smokedetector-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.kid_bedroom_smokedetector',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_19_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.kid_bedroom_smokedetector-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Kid Bedroom SmokeDetector',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 19,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kid_bedroom_smokedetector',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.living_room_two_window-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.living_room_two_window',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_15_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.living_room_two_window-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Living Room Two Window',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 15,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.living_room_two_window',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.living_room_window-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.living_room_window',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_14_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.living_room_window-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Living Room  Window',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 14,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.living_room_window',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.master_bedroom_door-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.master_bedroom_door',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_10_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.master_bedroom_door-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Master Bedroom  Door',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 10,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.master_bedroom_door',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.master_bedroom_keypad-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.master_bedroom_keypad',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_800_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.master_bedroom_keypad-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Master Bedroom Keypad',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 800,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.master_bedroom_keypad',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.master_bedroom_smokedetector-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.master_bedroom_smokedetector',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_24_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.master_bedroom_smokedetector-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Master Bedroom  SmokeDetector',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 24,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.master_bedroom_smokedetector',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.office_back_door-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.office_back_door',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_9_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.office_back_door-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Office Back Door',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 9,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.office_back_door',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.office_side_door-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.office_side_door',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_8_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.office_side_door-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Office Side Door',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 8,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.office_side_door',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.patio_door-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.patio_door',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_13_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.patio_door-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Patio  Door',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 13,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.patio_door',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.security-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.security',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_2_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.security-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Security',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 2,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.security',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_6_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Temperature',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 6,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.test_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.test_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Battery',
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_low_battery',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.test_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'test Battery',
      'location_id': 1234567,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.test_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entity_registry[binary_sensor.test_carbon_monoxide-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.test_carbon_monoxide',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CO: 'carbon_monoxide'>,
    'original_icon': None,
    'original_name': 'Carbon monoxide',
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_carbon_monoxide',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.test_carbon_monoxide-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'carbon_monoxide',
      'friendly_name': 'test Carbon monoxide',
      'location_id': 1234567,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.test_carbon_monoxide',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entity_registry[binary_sensor.test_police_emergency-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.test_police_emergency',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Police emergency',
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'police',
    'unique_id': '1234567_police',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.test_police_emergency-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test Police emergency',
      'location_id': 1234567,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.test_police_emergency',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entity_registry[binary_sensor.test_power-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.test_power',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.POWER: 'power'>,
    'original_icon': None,
    'original_name': 'Power',
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_power',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.test_power-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power',
      'friendly_name': 'test Power',
      'location_id': 1234567,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.test_power',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entity_registry[binary_sensor.test_smoke-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.test_smoke',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': 'Smoke',
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_smoke',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.test_smoke-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'test Smoke',
      'location_id': 1234567,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.test_smoke',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entity_registry[binary_sensor.test_tamper-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.test_tamper',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.TAMPER: 'tamper'>,
    'original_icon': None,
    'original_name': 'Tamper',
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_tamper',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.test_tamper-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'tamper',
      'friendly_name': 'test Tamper',
      'location_id': 1234567,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.test_tamper',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entity_registry[binary_sensor.unknown-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.unknown',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_5_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.unknown-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Unknown',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 5,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.unknown',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.upstairs_hallway_carbonmonoxided-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.upstairs_hallway_carbonmonoxided',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_23_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.upstairs_hallway_carbonmonoxided-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Upstairs Hallway CarbonMonoxideD',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 23,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.upstairs_hallway_carbonmonoxided',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.upstairs_hallway_smokedetector-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.upstairs_hallway_smokedetector',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_17_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.upstairs_hallway_smokedetector-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Upstairs Hallway SmokeDetector',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 17,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.upstairs_hallway_smokedetector',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.zone_995_fire-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.zone_995_fire',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_1995_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.zone_995_fire-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Zone 995 Fire',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 1995,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.zone_995_fire',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.zone_996_medical-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.zone_996_medical',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_1996_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.zone_996_medical-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Zone 996 Medical',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 1996,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.zone_996_medical',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.zone_998_other-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.zone_998_other',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_1998_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.zone_998_other-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Zone 998 Other',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 1998,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.zone_998_other',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_registry[binary_sensor.zone_999_police-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.zone_999_police',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567_1999_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[binary_sensor.zone_999_police-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Zone 999 Police',
      'location_id': 1234567,
      'partition': 1,
      'zone_id': 1999,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.zone_999_police',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
